Solve some deprecated and change to Spring Boot 3.2.1